nvml-wrapper-sys/src/bindings/linux.rs

#[test]
fn bindgen_test_layout_nvmlBAR1Memory_st() {
    assert_eq!(::std::mem::size_of::<nvmlBAR1Memory_st>() , 24usize , concat !
               ( "Size of: " , stringify ! ( nvmlBAR1Memory_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlBAR1Memory_st>() , 8usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlBAR1Memory_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBAR1Memory_st ) ) . bar1Total as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBAR1Memory_st ) ,
                "::" , stringify ! ( bar1Total ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBAR1Memory_st ) ) . bar1Free as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBAR1Memory_st ) ,
                "::" , stringify ! ( bar1Free ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBAR1Memory_st ) ) . bar1Used as *
                const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBAR1Memory_st ) ,
                "::" , stringify ! ( bar1Used ) ));
}
impl Clone for nvmlBAR1Memory_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlBAR1Memory_t = nvmlBAR1Memory_st;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlProcessInfo_st {
    pub pid: ::std::os::raw::c_uint,
    pub usedGpuMemory: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_nvmlProcessInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlProcessInfo_st>() , 16usize , concat
               ! ( "Size of: " , stringify ! ( nvmlProcessInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlProcessInfo_st>() , 8usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlProcessInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessInfo_st ) ) . pid as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlProcessInfo_st ) ,
                "::" , stringify ! ( pid ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlProcessInfo_st ) ) . usedGpuMemory as
                * const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlProcessInfo_st ) ,
                "::" , stringify ! ( usedGpuMemory ) ));
}
impl Clone for nvmlProcessInfo_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlProcessInfo_t = nvmlProcessInfo_st;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlBridgeChipType_enum {
    NVML_BRIDGE_CHIP_PLX = 0,
    NVML_BRIDGE_CHIP_BRO4 = 1,
}
pub use self::nvmlBridgeChipType_enum as nvmlBridgeChipType_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlNvLinkUtilizationCountUnits_enum {
    NVML_NVLINK_COUNTER_UNIT_CYCLES = 0,
    NVML_NVLINK_COUNTER_UNIT_PACKETS = 1,
    NVML_NVLINK_COUNTER_UNIT_BYTES = 2,
    NVML_NVLINK_COUNTER_UNIT_COUNT = 3,
}
pub use self::nvmlNvLinkUtilizationCountUnits_enum as
        nvmlNvLinkUtilizationCountUnits_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlNvLinkUtilizationCountPktTypes_enum {
    NVML_NVLINK_COUNTER_PKTFILTER_NOP = 1,
    NVML_NVLINK_COUNTER_PKTFILTER_READ = 2,
    NVML_NVLINK_COUNTER_PKTFILTER_WRITE = 4,
    NVML_NVLINK_COUNTER_PKTFILTER_RATOM = 8,
    NVML_NVLINK_COUNTER_PKTFILTER_NRATOM = 16,
    NVML_NVLINK_COUNTER_PKTFILTER_FLUSH = 32,
    NVML_NVLINK_COUNTER_PKTFILTER_RESPDATA = 64,
    NVML_NVLINK_COUNTER_PKTFILTER_RESPNODATA = 128,
    NVML_NVLINK_COUNTER_PKTFILTER_ALL = 255,
}
pub use self::nvmlNvLinkUtilizationCountPktTypes_enum as
        nvmlNvLinkUtilizationCountPktTypes_t;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlNvLinkUtilizationControl_st {
    pub units: nvmlNvLinkUtilizationCountUnits_t,
    pub pktfilter: nvmlNvLinkUtilizationCountPktTypes_t,
}
#[test]
fn bindgen_test_layout_nvmlNvLinkUtilizationControl_st() {
    assert_eq!(::std::mem::size_of::<nvmlNvLinkUtilizationControl_st>() ,
               8usize , concat ! (
               "Size of: " , stringify ! ( nvmlNvLinkUtilizationControl_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlNvLinkUtilizationControl_st>() ,
                4usize , concat ! (
                "Alignment of " , stringify ! (
                nvmlNvLinkUtilizationControl_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlNvLinkUtilizationControl_st ) ) .
                units as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlNvLinkUtilizationControl_st ) , "::" , stringify ! ( units
                ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlNvLinkUtilizationControl_st ) ) .
                pktfilter as * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlNvLinkUtilizationControl_st ) , "::" , stringify ! (
                pktfilter ) ));
}
impl Clone for nvmlNvLinkUtilizationControl_st {
    fn clone(&self) -> Self { *self }
}
impl Default for nvmlNvLinkUtilizationControl_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlNvLinkUtilizationControl_t = nvmlNvLinkUtilizationControl_st;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlNvLinkCapability_enum {
    NVML_NVLINK_CAP_P2P_SUPPORTED = 0,
    NVML_NVLINK_CAP_SYSMEM_ACCESS = 1,
    NVML_NVLINK_CAP_P2P_ATOMICS = 2,
    NVML_NVLINK_CAP_SYSMEM_ATOMICS = 3,
    NVML_NVLINK_CAP_SLI_BRIDGE = 4,
    NVML_NVLINK_CAP_VALID = 5,
    NVML_NVLINK_CAP_COUNT = 6,
}
pub use self::nvmlNvLinkCapability_enum as nvmlNvLinkCapability_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlNvLinkErrorCounter_enum {
    NVML_NVLINK_ERROR_DL_REPLAY = 0,
    NVML_NVLINK_ERROR_DL_RECOVERY = 1,
    NVML_NVLINK_ERROR_DL_CRC_FLIT = 2,
    NVML_NVLINK_ERROR_DL_CRC_DATA = 3,
    NVML_NVLINK_ERROR_COUNT = 4,
}
pub use self::nvmlNvLinkErrorCounter_enum as nvmlNvLinkErrorCounter_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlGpuLevel_enum {
    NVML_TOPOLOGY_INTERNAL = 0,
    NVML_TOPOLOGY_SINGLE = 10,
    NVML_TOPOLOGY_MULTIPLE = 20,
    NVML_TOPOLOGY_HOSTBRIDGE = 30,
    NVML_TOPOLOGY_CPU = 40,
    NVML_TOPOLOGY_SYSTEM = 50,
}
pub use self::nvmlGpuLevel_enum as nvmlGpuTopologyLevel_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlGpuP2PStatus_enum {
    NVML_P2P_STATUS_OK = 0,
    NVML_P2P_STATUS_CHIPSET_NOT_SUPPORED = 1,
    NVML_P2P_STATUS_GPU_NOT_SUPPORTED = 2,
    NVML_P2P_STATUS_IOH_TOPOLOGY_NOT_SUPPORTED = 3,
    NVML_P2P_STATUS_DISABLED_BY_REGKEY = 4,
    NVML_P2P_STATUS_NOT_SUPPORTED = 5,
    NVML_P2P_STATUS_UNKNOWN = 6,
}
pub use self::nvmlGpuP2PStatus_enum as nvmlGpuP2PStatus_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlGpuP2PCapsIndex_enum {
    NVML_P2P_CAPS_INDEX_READ = 0,
    NVML_P2P_CAPS_INDEX_WRITE = 1,
    NVML_P2P_CAPS_INDEX_NVLINK = 2,
    NVML_P2P_CAPS_INDEX_ATOMICS = 3,
    NVML_P2P_CAPS_INDEX_PROP = 4,
    NVML_P2P_CAPS_INDEX_UNKNOWN = 5,
}
pub use self::nvmlGpuP2PCapsIndex_enum as nvmlGpuP2PCapsIndex_t;
#[repr(C)]
#[derive(Debug, Copy)]
pub struct nvmlBridgeChipInfo_st {
    pub type_: nvmlBridgeChipType_t,
    pub fwVersion: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlBridgeChipInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlBridgeChipInfo_st>() , 8usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlBridgeChipInfo_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlBridgeChipInfo_st>() , 4usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlBridgeChipInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBridgeChipInfo_st ) ) . type_ as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBridgeChipInfo_st )
                , "::" , stringify ! ( type_ ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBridgeChipInfo_st ) ) . fwVersion as
                * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlBridgeChipInfo_st )
                , "::" , stringify ! ( fwVersion ) ));
}
impl Clone for nvmlBridgeChipInfo_st {
    fn clone(&self) -> Self { *self }
}
impl Default for nvmlBridgeChipInfo_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlBridgeChipInfo_t = nvmlBridgeChipInfo_st;
#[repr(C)]
pub struct nvmlBridgeChipHierarchy_st {
    pub bridgeCount: ::std::os::raw::c_uchar,
    pub bridgeChipInfo: [nvmlBridgeChipInfo_t; 128usize],
}
#[test]
fn bindgen_test_layout_nvmlBridgeChipHierarchy_st() {
    assert_eq!(::std::mem::size_of::<nvmlBridgeChipHierarchy_st>() , 1028usize
               , concat ! (
               "Size of: " , stringify ! ( nvmlBridgeChipHierarchy_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlBridgeChipHierarchy_st>() , 4usize
                , concat ! (
                "Alignment of " , stringify ! ( nvmlBridgeChipHierarchy_st )
                ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBridgeChipHierarchy_st ) ) .
                bridgeCount as * const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlBridgeChipHierarchy_st ) , "::" , stringify ! (
                bridgeCount ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlBridgeChipHierarchy_st ) ) .
                bridgeChipInfo as * const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! (
                nvmlBridgeChipHierarchy_st ) , "::" , stringify ! (
                bridgeChipInfo ) ));
}
impl Default for nvmlBridgeChipHierarchy_st {
    fn default() -> Self { unsafe { ::std::mem::zeroed() } }
}
pub type nvmlBridgeChipHierarchy_t = nvmlBridgeChipHierarchy_st;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlSamplingType_enum {
    NVML_TOTAL_POWER_SAMPLES = 0,
    NVML_GPU_UTILIZATION_SAMPLES = 1,
    NVML_MEMORY_UTILIZATION_SAMPLES = 2,
    NVML_ENC_UTILIZATION_SAMPLES = 3,
    NVML_DEC_UTILIZATION_SAMPLES = 4,
    NVML_PROCESSOR_CLK_SAMPLES = 5,
    NVML_MEMORY_CLK_SAMPLES = 6,
    NVML_SAMPLINGTYPE_COUNT = 7,
}
pub use self::nvmlSamplingType_enum as nvmlSamplingType_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlPcieUtilCounter_enum {
    NVML_PCIE_UTIL_TX_BYTES = 0,
    NVML_PCIE_UTIL_RX_BYTES = 1,
    NVML_PCIE_UTIL_COUNT = 2,
}
pub use self::nvmlPcieUtilCounter_enum as nvmlPcieUtilCounter_t;
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum nvmlValueType_enum {
    NVML_VALUE_TYPE_DOUBLE = 0,
    NVML_VALUE_TYPE_UNSIGNED_INT = 1,
    NVML_VALUE_TYPE_UNSIGNED_LONG = 2,
    NVML_VALUE_TYPE_UNSIGNED_LONG_LONG = 3,
    NVML_VALUE_TYPE_COUNT = 4,
}
pub use self::nvmlValueType_enum as nvmlValueType_t;
#[repr(C)]
#[derive(Copy)]
#[cfg(feature = "nightly")]
pub union nvmlValue_st {
    pub dVal: f64,
    pub uiVal: ::std::os::raw::c_uint,
    pub ulVal: ::std::os::raw::c_ulong,
    pub ullVal: ::std::os::raw::c_ulonglong,
}
